# mlops_lab

./: .gitignore  preprocess.py  pyproject.toml  run_pipeline.sh
models/: linear_svc_pipeline.pkl  logreg_baseline.pkl
notebooks/: titanic-survival.ipynb
reports/: metrics.json
scripts/: evaluate.py  featurize.py  inspect_features.py  predict.py  train.py
src/mlops_lab/: __init__.py
transformers/: bins_transformer.pkl  num_cat_transformer.pkl
