[project]
name = "mlops-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lynn elm", email = "lynnelmoussaoui@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
mlops-lab = "mlops_lab:main"

[build-system]
requires = ["uv_build>=0.8.20,<0.9.0"]
build-backend = "uv_build"
