[project]
name = "mlops_lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lynn El Moussaoui", email = "lynnelmoussaoui@gmail.com" },
    { name = "Ali Mahfouz", email = "ali.mahfouzz@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[project.scripts]
mlops-lab = "mlops_lab:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
